[gd_scene load_steps=10 format=3 uid="uid://dp38ngjcwgrve"]

[ext_resource type="Script" uid="uid://bxu7xw2hnvlf" path="res://scripts/workday/workday_main.gd" id="1_3kw5b"]
[ext_resource type="Texture2D" uid="uid://pywkdfx8n3kj" path="res://assets/workday_main_scene/ui/background.png" id="2_l1gjv"]
[ext_resource type="Texture2D" uid="uid://d1iw48b42fv22" path="res://assets/workday_main_scene/ui/card_side_bar_char.png" id="3_5kwh5"]
[ext_resource type="Texture2D" uid="uid://cjxh03jhqdync" path="res://assets/workday_main_scene/ui/card_side_bar_others.png" id="4_k4e8n"]
[ext_resource type="Texture2D" uid="uid://eb6keaga1wls" path="res://assets/workday_main_scene/ui/PC.png" id="5_2kxyj"]
[ext_resource type="PackedScene" uid="uid://df5nt5te15k4j" path="res://scenes/workday/pc_game_container.tscn" id="6_4r7qj"]
[ext_resource type="Texture2D" uid="uid://kwb5siqgq1tm" path="res://assets/workday_main_scene/ui/rabbit_icon.png" id="6_uqkgb"]
[ext_resource type="Texture2D" uid="uid://bew3b67ps7kcn" path="res://assets/workday_main_scene/ui/cup_icon.png" id="7_yc3wy"]
[ext_resource type="Texture2D" uid="uid://b1iboc0t6qecj" path="res://assets/workday_main_scene/ui/bear_icon.png" id="8_fbp6n"]

[node name="WorkdayMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 81.0
offset_right = 620.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kw5b")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-106, -124)
scale = Vector2(0.711458, 0.667593)
texture = ExtResource("2_l1gjv")
centered = false

[node name="CardSideBar" type="Node2D" parent="."]
z_index = 1

[node name="CardSideBarChar" type="Sprite2D" parent="CardSideBar"]
position = Vector2(80, 27)
rotation = -0.31765
scale = Vector2(0.329363, 0.365827)
texture = ExtResource("3_5kwh5")
centered = false

[node name="CardSideBarOthers" type="Sprite2D" parent="CardSideBar"]
position = Vector2(118, 71)
rotation = -0.202458
scale = Vector2(0.338368, 0.362183)
texture = ExtResource("4_k4e8n")
centered = false

[node name="UIElements" type="Node2D" parent="."]
z_index = 3

[node name="PC" type="Sprite2D" parent="UIElements"]
z_index = 2
position = Vector2(-14, -102)
scale = Vector2(0.704688, 0.637963)
texture = ExtResource("5_2kxyj")
centered = false

[node name="PCGameContainer" parent="UIElements/PC" instance=ExtResource("6_4r7qj")]
position = Vector2(300, 200)

[node name="Icons" type="Node2D" parent="UIElements"]
z_index = 3

[node name="RabbitIcon" type="Sprite2D" parent="UIElements/Icons"]
position = Vector2(55, 364)
scale = Vector2(0.263736, 0.24293)
texture = ExtResource("6_uqkgb")
centered = false

[node name="CupIcon" type="Sprite2D" parent="UIElements/Icons"]
position = Vector2(203, 416)
scale = Vector2(0.224105, 0.184211)
texture = ExtResource("7_yc3wy")
centered = false

[node name="BearIcon" type="Sprite2D" parent="UIElements/Icons"]
position = Vector2(1025, 359)
scale = Vector2(0.246429, 0.25)
texture = ExtResource("8_fbp6n")
centered = false
